--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,11 @@ data/mnist/MNIST/raw/train-images-idx3-ubyte
 data/mnist/MNIST/raw/train-images-idx3-ubyte.gz
 data/mnist/MNIST/raw/train-labels-idx1-ubyte
 data/mnist/MNIST/raw/train-labels-idx1-ubyte.gz
+mnist_data/MNIST/raw/t10k-images-idx3-ubyte
+mnist_data/MNIST/raw/t10k-images-idx3-ubyte.gz
+mnist_data/MNIST/raw/t10k-labels-idx1-ubyte
+mnist_data/MNIST/raw/t10k-labels-idx1-ubyte.gz
+mnist_data/MNIST/raw/train-images-idx3-ubyte
+mnist_data/MNIST/raw/train-images-idx3-ubyte.gz
+mnist_data/MNIST/raw/train-labels-idx1-ubyte
+mnist_data/MNIST/raw/train-labels-idx1-ubyte.gz
