--- a/.gitignore
+++ b/.gitignore
@@ -1,179 +1,3 @@
-
-gancheckpoints/discriminator_0.pth
-gancheckpoints/discriminator_1.pth
-gancheckpoints/discriminator_10.pth
-gancheckpoints/discriminator_11.pth
-gancheckpoints/discriminator_12.pth
-gancheckpoints/discriminator_13.pth
-gancheckpoints/discriminator_14.pth
-gancheckpoints/discriminator_15.pth
-gancheckpoints/discriminator_16.pth
-gancheckpoints/discriminator_17.pth
-gancheckpoints/discriminator_18.pth
-gancheckpoints/discriminator_19.pth
-gancheckpoints/discriminator_2.pth
-gancheckpoints/discriminator_20.pth
-gancheckpoints/discriminator_21.pth
-gancheckpoints/discriminator_22.pth
-gancheckpoints/discriminator_23.pth
-gancheckpoints/discriminator_24.pth
-gancheckpoints/discriminator_25.pth
-gancheckpoints/discriminator_26.pth
-gancheckpoints/discriminator_27.pth
-gancheckpoints/discriminator_28.pth
-gancheckpoints/discriminator_29.pth
-gancheckpoints/discriminator_3.pth
-gancheckpoints/discriminator_30.pth
-gancheckpoints/discriminator_31.pth
-gancheckpoints/discriminator_32.pth
-gancheckpoints/discriminator_33.pth
-gancheckpoints/discriminator_34.pth
-gancheckpoints/discriminator_35.pth
-gancheckpoints/discriminator_36.pth
-gancheckpoints/discriminator_37.pth
-gancheckpoints/discriminator_38.pth
-gancheckpoints/discriminator_39.pth
-gancheckpoints/discriminator_4.pth
-gancheckpoints/discriminator_40.pth
-gancheckpoints/discriminator_41.pth
-gancheckpoints/discriminator_42.pth
-gancheckpoints/discriminator_43.pth
-gancheckpoints/discriminator_44.pth
-gancheckpoints/discriminator_45.pth
-gancheckpoints/discriminator_46.pth
-gancheckpoints/discriminator_47.pth
-gancheckpoints/discriminator_48.pth
-gancheckpoints/discriminator_49.pth
-gancheckpoints/discriminator_5.pth
-gancheckpoints/discriminator_50.pth
-gancheckpoints/discriminator_51.pth
-gancheckpoints/discriminator_52.pth
-gancheckpoints/discriminator_53.pth
-gancheckpoints/discriminator_54.pth
-gancheckpoints/discriminator_55.pth
-gancheckpoints/discriminator_56.pth
-gancheckpoints/discriminator_57.pth
-gancheckpoints/discriminator_58.pth
-gancheckpoints/discriminator_59.pth
-gancheckpoints/discriminator_6.pth
-gancheckpoints/discriminator_60.pth
-gancheckpoints/discriminator_61.pth
-gancheckpoints/discriminator_62.pth
-gancheckpoints/discriminator_63.pth
-gancheckpoints/discriminator_64.pth
-gancheckpoints/discriminator_65.pth
-gancheckpoints/discriminator_66.pth
-gancheckpoints/discriminator_67.pth
-gancheckpoints/discriminator_68.pth
-gancheckpoints/discriminator_69.pth
-gancheckpoints/discriminator_7.pth
-gancheckpoints/discriminator_70.pth
-gancheckpoints/discriminator_71.pth
-gancheckpoints/discriminator_72.pth
-gancheckpoints/discriminator_73.pth
-gancheckpoints/discriminator_74.pth
-gancheckpoints/discriminator_75.pth
-gancheckpoints/discriminator_76.pth
-gancheckpoints/discriminator_77.pth
-gancheckpoints/discriminator_78.pth
-gancheckpoints/discriminator_79.pth
-gancheckpoints/discriminator_8.pth
-gancheckpoints/discriminator_80.pth
-gancheckpoints/generator_9.pth
-gancheckpoints/generator_80.pth
-gancheckpoints/generator_8.pth
-gancheckpoints/generator_79.pth
-gancheckpoints/generator_78.pth
-gancheckpoints/generator_77.pth
-gancheckpoints/generator_76.pth
-gancheckpoints/generator_75.pth
-gancheckpoints/generator_74.pth
-gancheckpoints/generator_73.pth
-gancheckpoints/generator_72.pth
-gancheckpoints/generator_71.pth
-gancheckpoints/generator_70.pth
-gancheckpoints/generator_7.pth
-gancheckpoints/generator_69.pth
-gancheckpoints/generator_68.pth
-gancheckpoints/generator_67.pth
-gancheckpoints/generator_66.pth
-gancheckpoints/generator_65.pth
-gancheckpoints/generator_64.pth
-gancheckpoints/generator_63.pth
-gancheckpoints/generator_62.pth
-gancheckpoints/generator_61.pth
-gancheckpoints/generator_60.pth
-gancheckpoints/generator_6.pth
-gancheckpoints/generator_59.pth
-gancheckpoints/generator_58.pth
-gancheckpoints/generator_57.pth
-gancheckpoints/generator_56.pth
-gancheckpoints/generator_55.pth
-gancheckpoints/generator_54.pth
-gancheckpoints/generator_53.pth
-gancheckpoints/generator_52.pth
-gancheckpoints/generator_51.pth
-gancheckpoints/generator_50.pth
-gancheckpoints/generator_5.pth
-gancheckpoints/generator_49.pth
-gancheckpoints/generator_48.pth
-gancheckpoints/generator_47.pth
-gancheckpoints/generator_46.pth
-gancheckpoints/generator_45.pth
-gancheckpoints/generator_44.pth
-gancheckpoints/generator_43.pth
-gancheckpoints/generator_42.pth
-gancheckpoints/generator_41.pth
-gancheckpoints/generator_40.pth
-gancheckpoints/generator_4.pth
-gancheckpoints/generator_39.pth
-gancheckpoints/generator_38.pth
-gancheckpoints/generator_37.pth
-gancheckpoints/generator_36.pth
-gancheckpoints/generator_35.pth
-gancheckpoints/generator_34.pth
-gancheckpoints/generator_33.pth
-gancheckpoints/generator_32.pth
-gancheckpoints/generator_31.pth
-gancheckpoints/generator_30.pth
-gancheckpoints/generator_3.pth
-gancheckpoints/generator_29.pth
-gancheckpoints/generator_28.pth
-gancheckpoints/generator_27.pth
-gancheckpoints/generator_26.pth
-gancheckpoints/generator_25.pth
-gancheckpoints/generator_24.pth
-gancheckpoints/generator_23.pth
-gancheckpoints/generator_22.pth
-gancheckpoints/generator_21.pth
-gancheckpoints/generator_20.pth
-gancheckpoints/generator_2.pth
-gancheckpoints/generator_19.pth
-gancheckpoints/generator_18.pth
-gancheckpoints/generator_17.pth
-gancheckpoints/generator_16.pth
-gancheckpoints/generator_15.pth
-gancheckpoints/generator_14.pth
-gancheckpoints/generator_13.pth
-gancheckpoints/generator_12.pth
-gancheckpoints/generator_11.pth
-gancheckpoints/generator_10.pth
-gancheckpoints/generator_1.pth
-gancheckpoints/generator_0.pth
-gancheckpoints/discriminator_9.pth
-data/mnist/MNIST/raw/t10k-images-idx3-ubyte
-data/mnist/MNIST/raw/t10k-images-idx3-ubyte.gz
-data/mnist/MNIST/raw/t10k-labels-idx1-ubyte
-data/mnist/MNIST/raw/t10k-labels-idx1-ubyte.gz
-data/mnist/MNIST/raw/train-images-idx3-ubyte
-data/mnist/MNIST/raw/train-images-idx3-ubyte.gz
-data/mnist/MNIST/raw/train-labels-idx1-ubyte
-data/mnist/MNIST/raw/train-labels-idx1-ubyte.gz
-mnist_data/MNIST/raw/t10k-images-idx3-ubyte
-mnist_data/MNIST/raw/t10k-images-idx3-ubyte.gz
-mnist_data/MNIST/raw/t10k-labels-idx1-ubyte
-mnist_data/MNIST/raw/t10k-labels-idx1-ubyte.gz
-mnist_data/MNIST/raw/train-images-idx3-ubyte
-mnist_data/MNIST/raw/train-images-idx3-ubyte.gz
-mnist_data/MNIST/raw/train-labels-idx1-ubyte
-mnist_data/MNIST/raw/train-labels-idx1-ubyte.gz
+gancheckpoints/**
+data/**
+mnist_data/**
