--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 data/**
 datasets/**
 augmented_datasets/**
-models/**
+models/cifar10/*
 *.ipynb
 *.pyc
-
+*.csv
 
 grad_latents_00000_50000.npy
 sg2c10-32.pkl
